--- a/Clavamox_Landingpage/styles.css
+++ b/Clavamox_Landingpage/styles.css
@@ -9,7 +9,7 @@
 body {
     background: url(assets/background.png) no-repeat center center fixed;
     background-size: cover;
-    /* overflow: hidden; */
+    /* overflow: hidden; */ 
 }
 
 .navbar {
@@ -184,21 +184,22 @@ p {
 
 @media screen and (max-width: 600px) {
     .calculator {
-        width: 400px;
+        width: 100%;
         height: 481px;
         background-color: rgba(255, 255, 255, 0.324);
         border-radius: 20px;
         display: flex;
         flex-direction: column;
         position: relative;
-        margin: 0 30px 0 30px;
+        margin: 0px;
     }
     .navbar_logo {
         margin: 15px 0 0 20px;
     }
     .main_text {
         width: 90%;
-        margin-bottom: 90px;
+        margin-bottom: 40px;
+
     }
     .urso {
         display: none;
@@ -219,7 +220,7 @@ p {
 
 @media screen and (max-width: 1000px) {
     .calculator {
-        width: 600px;
+        width: 100%;
         height: 481px;
         background-color: rgba(255, 255, 255, 0.324);
         border-radius: 20px;
@@ -232,12 +233,13 @@ p {
     }
     .main_text {
         width: 90%;
-        margin-bottom: 90px;
+        margin-bottom: 40px;
     }
     .urso {
         display: none;
     }
     .toma {
-        top: -50px;
+        /*top: -50px;*/
+        display: none;
     }
 }
