--- a/Clavamox_Landingpage/styles.css
+++ b/Clavamox_Landingpage/styles.css
@@ -218,7 +218,7 @@ p {
     }
 }
 
-@media screen and (max-width: 1000px) {
+/* @media screen and (max-width: 1000px) {
     .calculator {
         width: 100%;
         height: 481px;
@@ -242,4 +242,4 @@ p {
         /*top: -50px;*/
         display: none;
     }
-}
+} */
