--- a/Clavamox_Landingpage/styles.css
+++ b/Clavamox_Landingpage/styles.css
@@ -187,7 +187,7 @@ p {
         width: 90%;
         height: 481px;
         background-color: rgba(255, 255, 255, 0.324);
-        border-radius: 80px;
+        border-radius: 20px;
         display: flex;
         flex-direction: column;
         position: relative;
@@ -218,7 +218,7 @@ p {
     }
 }
 
-/* @media screen and (max-width: 1000px) {
+@media screen and (max-width: 1000px) {
     .calculator {
         width: 100%;
         height: 481px;
@@ -242,4 +242,4 @@ p {
         /*top: -50px;*/
         display: none;
     }
-} */
+}
