--- a/Clavamox_Landingpage/styles.css
+++ b/Clavamox_Landingpage/styles.css
@@ -187,11 +187,11 @@ p {
         width: 90%;
         height: 481px;
         background-color: rgba(255, 255, 255, 0.324);
-        border-radius: 21px;
+        border-radius: 20px;
         display: flex;
         flex-direction: column;
         position: relative;
-        margin: 0px;
+        margin-bottom: 40px;
     }
     .navbar_logo {
         margin: 15px 0 0 20px;
@@ -205,7 +205,7 @@ p {
         display: none;
     }
     .toma {
-        top: -50px;
+        display: none;
     }
     #slider {
         width: 80%;
@@ -218,9 +218,9 @@ p {
     }
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1000px) and (min-width: 601px) {
     .calculator {
-        width: 100%;
+        width: 90%;
         height: 481px;
         background-color: rgba(255, 255, 255, 0.324);
         border-radius: 20px;
