--- a/Clavamox_Landingpage/styles.css
+++ b/Clavamox_Landingpage/styles.css
@@ -218,6 +218,7 @@ p {
     }
     .xarope_dosagem_info_container {
         margin: 40px 20px 0px 20px;
+        text-align: center;
     }
 }
 
@@ -247,5 +248,6 @@ p {
     }
     .xarope_dosagem_info_container {
         margin: 40px 20px 0px 20px;
+        text-align: center;
     }
 }
