--- a/Clavamox_Landingpage/styles.css
+++ b/Clavamox_Landingpage/styles.css
@@ -26,13 +26,13 @@ body {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: center;
     flex-wrap: wrap;
 }
 
 .main_text {
     flex-direction: column;
-    width: 40%;
+    width: 35%;
 }
 
 h1 {
@@ -58,6 +58,7 @@ p {
     display: flex;
     flex-direction: column;
     position: relative;
+    margin-left: 30px;
 }
 
 .xarope_dosagem_info_container {
@@ -165,7 +166,6 @@ p {
     margin: 0px 20px;
     max-width: -webkit-fill-available;
     max-height: 110px;
-    margin-bottom: 40px;
   }
 
 .toma {
@@ -192,6 +192,7 @@ p {
         flex-direction: column;
         position: relative;
         margin-bottom: 40px;
+        margin-left: 0px;
     }
     .navbar_logo {
         margin: 15px 0 0 20px;
@@ -231,6 +232,7 @@ p {
         display: flex;
         flex-direction: column;
         position: relative;
+        margin-left: 0px;
     }
     .navbar_logo {
         margin: 15px 0 0 20px;
