--- a/Clavamox_Landingpage/styles.css
+++ b/Clavamox_Landingpage/styles.css
@@ -40,6 +40,7 @@ h1 {
     font-size: 54px;
     font-weight: 700;
     color: #005280;
+    max-width: 85%;
 }
 
 p {
@@ -48,6 +49,7 @@ p {
     font-weight: 400;
     margin-top: 20px;
     color: #005280;
+    max-width: 85%;
 }
 
 .calculator {
@@ -162,8 +164,7 @@ p {
   }
 
 #spoon_image {
-    margin-bottom: 40px;
-    margin: 0px 20px;
+    margin: 0px 20px 40px 20px;
     max-width: -webkit-fill-available;
     max-height: 110px;
   }
@@ -185,7 +186,7 @@ p {
 @media screen and (max-width: 600px) {
     .calculator {
         width: 90%;
-        height: 481px;
+        height: 430px;
         background-color: rgba(255, 255, 255, 0.324);
         border-radius: 20px;
         display: flex;
@@ -209,7 +210,7 @@ p {
         display: none;
     }
     #slider {
-        width: 80%;
+        width: 75%;
     }
     h1 {
         font-size: 42px;
@@ -220,6 +221,10 @@ p {
     .xarope_dosagem_info_container {
         margin: 40px 20px 0px 20px;
         text-align: center;
+    }
+    #spoon_image {
+        max-height: 60px;
+        margin: 0px 0px 40px 0px;
     }
 }
 
